remove version from settings

--- a/html/gs2009settings.html
+++ b/html/gs2009settings.html
@@ -354,7 +354,7 @@
                 <tr>
                     <td valign=top>
                         <br>
-                        <b>gs2009</b> - version 2025-11-19 - <a href="https://github.com/pap-git/gs2009">GitHub</a> - an Google 2009 recreation by paphere
+                        <b>gs2009</b> - <a href="https://github.com/pap-git/gs2009">GitHub</a> - an Google 2009 recreation by paphere
                     </td>
                 </tr>
             </table>
