--- a/html/ja/search.html
+++ b/html/ja/search.html
@@ -133,53 +133,53 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
                   <span class="csb" style="background-position:-44px 0;width:16px"></span>
                   1
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=10&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=10&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       2
                   </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=20&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=20&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       3
                     </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=30&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=30&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       4
                     </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=40&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=40&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       5
                     </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=50&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=50&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       6
                     </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=60&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=60&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       7
                     </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=70&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=70&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       8
                     </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=80&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=80&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       9
                     </a>
                   <td>
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=90&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=90&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       10
                     </a><td class="b">
-                    <a href="/search?hl=en&amp;q=%22tack+sharp%22&amp;start=10&amp;sa=N">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=10&amp;sa=N">
                       <span class="csb ch" style="background-position:-76px 0;margin-right:34px;width:66px"></span>
-                      Next
+                      ŽŸ‚Ö
                     </a>
           </table>
           <div style="height:1px;line-height:0"></div>
