added page system (#2), actual page count

--- a/html/en/search.html
+++ b/html/en/search.html
@@ -63,7 +63,7 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
           <b>Web</b>
         </div>
         <p>
-          &nbsp;Results <b>1</b> - <b>10</b> of about <b>104,000</b> for <b>query</b>.  (<b>searchFinish</b> seconds)</div>
+          &nbsp;Results <b>currentItems</b> - <b>currentItems2</b> of about <b>formattedTotalResults</b> for <b>query</b>.  (<b>searchFinish</b> seconds)</div>
           <div id="res" class="med">
             <h2 class="hd">Search Results</h2>
             <div>
@@ -85,10 +85,18 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
           <table id="nav" align="center" style="border-collapse:collapse;margin:auto;text-align:center;direction:ltr;margin-bottom:1.4em">
             <tr valign="top">
               <td class="b">
+                  <a href="/search?hl=ja&amp;q=query&amp;start=prevstart&amp;sa=N">
+                    <span class="csb ch" style="background-position:0px 0;width:16px"></span>
+                    Back
+                  </a>
+                <td class="e">
                 <span class="csb" style="background-position:-26px 0;width:18px"></span>
                 <td class="cur">
-                  <span class="csb" style="background-position:-44px 0;width:16px"></span>
-                  1
+                  <td>
+                    <a href="/search?hl=en&amp;q=query&amp;sa=N">
+                      <span class="csb ch" style="background-position:-44px 0;width:16px"></span>
+                      1
+                  </a>
                   <td>
                     <a href="/search?hl=en&amp;q=query&amp;start=10&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
@@ -134,7 +142,7 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       10
                     </a><td class="b">
-                    <a href="/search?hl=en&amp;q=query&amp;start=10&amp;sa=N">
+                    <a href="/search?hl=en&amp;q=query&amp;start=nextstart&amp;sa=N">
                       <span class="csb ch" style="background-position:-76px 0;margin-right:34px;width:66px"></span>
                       Next
                     </a>
