--- a/html/ja/search.html
+++ b/html/ja/search.html
@@ -51,7 +51,7 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
         </div>
         <p>
           <!-- &nbsp;Results <b>1</b> - <b>10</b> of about <b>104,000</b> for <b><a href="http://www.google.com/url?q=http://www.answers.com/tack&amp;r=67&amp;ei=bYKZSaOkN5qWsAO_lfVy&amp;sa=X&amp;oi=dict&amp;ct=D&amp;cd=1&amp;usg=AFQjCNHNxeXXvY7H83x4ToWHK5KJV7gUbQ" title="Look up definition of tack">query</a></b>.  (<b>0.14</b> seconds)-->
-          <b>query</b> ÇÃåüçıåãâ  ñÒ <b>104,000</b> åèíÜ <b>1</b> - <b>10</b> åè (searchFinish ïb)&nbsp;</div>
+          <b>query</b> ÇÃåüçıåãâ  ñÒ <b>formattedTotalResults</b> åèíÜ <b>currentItems</b> - <b>currentItems2</b> åè (searchFinish ïb)&nbsp;</div>
           <div id="res" class="med">
             <h2 class="hd">Search Results</h2>
             <div>
@@ -128,10 +128,19 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
           <table id="nav" align="center" style="border-collapse:collapse;margin:auto;text-align:center;direction:ltr;margin-bottom:1.4em">
             <tr valign="top">
               <td class="b">
-                <span class="csb" style="background-position:-26px 0;width:18px"></span>
+                <td class="b">
+                  <a href="/search?hl=ja&amp;q=query&amp;start=prevstart&amp;sa=N">
+                    <span class="csb ch" style="background-position:0px 0;width:16px"></span>
+                    ëOÇ÷
+                  </a>
+                <td class="e">
+                  <span class="csb" style="background-position:-26px 0;width:18px"></span>
                 <td class="cur">
-                  <span class="csb" style="background-position:-44px 0;width:16px"></span>
-                  1
+                  <td>
+                  <a href="/search?hl=ja&amp;q=query&amp;sa=N">
+                      <span class="csb ch" style="background-position:-44px 0;width:16px"></span>
+                      1
+                  </a>
                   <td>
                     <a href="/search?hl=ja&amp;q=query&amp;start=10&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
@@ -176,8 +185,9 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
                     <a href="/search?hl=ja&amp;q=query&amp;start=90&amp;sa=N">
                       <span class="csb ch" style="background-position:-60px 0;width:16px"></span>
                       10
-                    </a><td class="b">
-                    <a href="/search?hl=ja&amp;q=query&amp;start=10&amp;sa=N">
+                    </a>
+                  <td class="b">
+                    <a href="/search?hl=ja&amp;q=query&amp;start=nextstart&amp;sa=N">
                       <span class="csb ch" style="background-position:-76px 0;margin-right:34px;width:66px"></span>
                       éüÇ÷
                     </a>
