added "did you mean" feature, "topItem" for future use

--- a/html/ja/search.html
+++ b/html/ja/search.html
@@ -59,6 +59,8 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
                 <!--
                 <li class="g"><h3 class="r"><a href="UrlLink" class="l">htmlTitle</a></h3><div class="s">htmlSnippet<br><cite>htmlFormattedUrl</cite><span class="gl"><a href="http://209.85.173.132/search?q=cache:5ipn58da2nwJ:www.tacksharp.net/+%22tack+sharp%22&amp;hl=en&amp;ct=clnk&amp;cd=1&amp;gl=us">キャッシュ</a> - <a href="/search?hl=en&amp;q=related:relatedUrlLink">類似ページ</a></span></div>
                 -->
+                didyoumean
+                topItem
                 item
                 item
                 item
