--- a/html/en/search.html
+++ b/html/en/search.html
@@ -68,6 +68,8 @@ google.y={};google.x=function(e,g){google.y[e.id]=[e,g];return false};window.gba
             <h2 class="hd">Search Results</h2>
             <div>
               <ol>
+                didyoumean
+                topItem
                 item
                 item
                 item
